apps/xsalgovic-patient-be/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: xsalgovic-patient-webapi
spec:
 parentRefs:
   - name: wac-hospital-gateway
     namespace: wac-hospital
   - name: wac-hospital-gateway  # Hack to make it work for common cluster
     namespace: wac-hospital-system
 rules:
   - matches:
       - path:
           type: PathPrefix
           value: /xsalgovic-patient-api
     filters:
       - type: URLRewrite
         urlRewrite:
           path:
             type: ReplacePrefixMatch
             replacePrefixMatch: /api
     backendRefs:
       - group: ""
         kind: Service
         name: xsalgovic-patient-webapi
         port: 80
